# galgame_cn

./: generate.sh  readme.md  sites.txt  template.md
generate_list/: Cargo.toml  LICENSE
generate_list/src/: main.rs
