[package]
name = "generate_list"
authors = ["poly000"]
description = "generate [title](link) from URL's"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features = ["derive"]}
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time"] }
playwright = "0.0.20"
anyhow = "1.0.71"
hex-simd = "0.8.0"
md5 = "0.7.0"